refactor(spring-api): eliminate dead code and reduce duplication
- Delete unused *Converter classes (ApplicationStatusConverter,
  CompanyCategoryConverter, JobSourceConverter)
- Simplify UserType.fromDbValue() to delegate to each enum's fromValue()
- Extract CSV_HEADER constant shared by exportCsv and getSampleCsv
- Extract DIFF_EXCLUDED_FIELDS constant; replace inline chain in computeDiffs
- Fix computeDiffs raw Map to typed Map<String,Object> via TypeReference
- Extract shouldCreateDefaultStages() predicate from update()
- Extract buildHeaderMap, parseOptionalEnum, parseOptionalInt, parseOptionalDate,
  setIfNotBlank helpers; shrink buildApplicationFromRow from 65 to 20 lines
- Change DEFAULT_STAGE_NAMES from Arrays.asList to List.of
- Rename handleIllegalArg to handleIllegalArgument
- Add RuntimeException handler in GlobalExceptionHandler
- ApplicationSpecifications: extract parseEnumValues helper